<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/let_s_begin"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="28dp"
            app:cardBackgroundColor="@color/card"
            app:cardCornerRadius="25dp">

            <Button
                android:id="@+id/button1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/button"
                android:text="@string/kg_to_gram" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="28dp"
            app:cardBackgroundColor="@color/card"
            app:cardCornerRadius="25dp">

            <Button
                android:id="@+id/button2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/button"
                android:text="@string/kg_to_pound" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="28dp"
            app:cardBackgroundColor="@color/card"
            app:cardCornerRadius="25dp">

            <Button
                android:id="@+id/button3"
                android:layout_width="95dp"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/button"
                android:text="@string/celsius_to_kelvin" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="28dp"
            app:cardBackgroundColor="@color/card"
            app:cardCornerRadius="25dp">

            <Button
                android:id="@+id/button4"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/button"
                android:text="@string/meter_to_feet" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>